# pi-workspace-cpp

rpi-blink-docker/: CMakeLists.txt  CMakePresets.json
rpi-blink-docker/cmake/: aarch64-docker-toolchain.cmake
rpi-blink-docker/docker/: Dockerfile
rpi-blink-docker/scripts/: build.ps1  debug.ps1  deploy.ps1
rpi-blink-docker/src/: main.cpp
rpi-blink-local/: CMakeLists.txt  CMakePresets.json
rpi-blink-local/cmake/: aarch64-rpi-toolchain.cmake
rpi-blink-local/src/: main.cpp
rpi-blink-remote/: CMakeLists.txt  CMakePresets.json
